# OptiBeam

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bump-version.yml
OptiBeam/: __init__.py  evaluation.py  utils.py
doc/source/: conf.py  index.rst
docs/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  update_docs.sh
docs/_modules/: index.html
docs/_modules/optibeam/: camera.html  evaluation.html  simulation.html  training.html  (+2 more)
docs/_static/: documentation_options.js
docs/docs/: genindex.html  search.html  searchindex.js
docs/modules/: modules.html  optibeam.html
docs/source/: conf.py  index.rst
examples/: units.py  vue.py
examples/data_collection/: align_dmd.py  calibrations.py  cam_focus_test.py  camera_test.py  conf.py  data_collection_dmd.py  data_collection_pipeline.py  data_collection_v2.py  fiber_coupling.py  filter_test.py  filter_test_two_cameras.py  george.py  initialization.py  main.py  post_processing.py  remoteJapcAccess.py  run_forever.py  temp.py  test.py  test_basis.py
examples/data_collection_dmd/: conf.py  initialization.py  main.py  main_resized.py  post_processing.py  test.py
examples/evaluation/: conf.py
examples/machine_learning/: autoencoder.py  autoencoder_pix2pix.py  conf.py  image_reconstruction.ipynb  inference.py  model.py  model_backup.py  pix2pix.py  reconstruction.py  regression.py  submit.sh  temp.py  test.py  training.py
optibeam/: __init__.py  analysis.py  basis.py  camera.py  camerav2.py  database.py  datapipeline.py  dmd.py  evaluation.py  metadata.py  processing.py  simulation.py  training.py  utils.py  visualization.py
sphinx/: Makefile  update_docs.sh
tests/: old_code.py
tests/sphinx/: Makefile  update_docs.sh
tests/unit_tests/: conftest.py  data_collection.py  helper.py  multi_cams.py  single_cam.py  temp  temp.py  test.py  test_beta.py  test_camera_ptp.py  test_cameras.py  test_cameras_sych.py  test_capture_imgs  test_data_collection.py  test_database.py  test_dmd.py  test_dmd_corner_blocks.py  test_dmd_distribution  test_dmd_distribution.py  test_dmd_queue_pipeline.py  test_img_process.py  test_multi_cam_sync.py  test_patterns.py  test_patterns_gen.py  test_processing.py  test_transformation.py
(+21 files in other folders)
