[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optibeam"
version = "0.1.32"
authors = [{name = "Andrew Xu", email = "qiyuanxu95@gmail.com"}]
description = "Python modules for processing images, analyzing data, visualizing results, and machine learning in accelerator physics."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = {
    "Homepage": "https://github.com/Andrew-XQY/OptiBeam"
}

dependencies = [
    "numpy>=1.18.1",
    "scipy",
    "moviepy",
    "matplotlib",
    "tensorflow",
    "scikit-learn",  # Note: 'sklearn' is part of 'scikit-learn'
    "IPython",
    "multiprocess",
    "tqdm",
    "Pillow",       # Note: 'PIL' package is accessed via 'Pillow'
    "typing; python_version<'3.5'",  # 'typing' is only needed for Python versions < 3.5
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8"
]

[tool.setuptools]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://example.com/OptiBeam/documentation"  # Change URL as needed
Source = "https://github.com/Andrew-XQY/OptiBeam"
