[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optibeam"
version = "0.1.43"
description = "Python modules for processing images, analyzing data, visualizing results, and machine learning in accelerator physics."
readme = "README.md"
authors = [
    { name = "Andrew Xu", email = "qiyuanxu95@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.18.1",
    "scipy",
    "moviepy",
    "matplotlib",
    "tensorflow",
    "scikit-learn",
    "IPython",
    "multiprocess",
    "tqdm",
    "Pillow",  # Note: PIL should be replaced with Pillow, the modern fork of PIL
    "typing; python_version<'3.5'",  # Only needed for versions of Python < 3.5
    "seaborn",
    "plotly",
]

[project.urls]
Homepage = "https://github.com/Andrew-XQY/OptiBeam"
